--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -36,7 +36,8 @@
     </td>
     <td><%= party.venue %></td>
     <td><%= party.location %></td>
-    <td class="time"><%= party[:when] %></td>
+    <td><%= party.theme %></td>
+    <td class="time"><%= party[:when_at] %></td>
     <td class="time"><%= party[:when_its_over] %></td>
     <td><%= party.descript %></td>
   </tr>
